--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -200,7 +200,7 @@
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
             <item row="1" column="0">
-             <widget class="QLabel" name="originalLabel">
+             <widget class="DropArea" name="originalLabel">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -213,8 +213,17 @@
                 <height>0</height>
                </size>
               </property>
+              <property name="focusPolicy">
+               <enum>Qt::NoFocus</enum>
+              </property>
               <property name="text">
-               <string/>
+               <string>drop image here or click to invoke file open dialog</string>
+              </property>
+              <property name="scaledContents">
+               <bool>false</bool>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
@@ -1366,6 +1375,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>DropArea</class>
+   <extends>QLabel</extends>
+   <header>droparea.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
