--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -239,7 +239,7 @@
         <string>Noised</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="1" column="0" colspan="7">
+        <item row="1" column="0" colspan="8">
          <widget class="QScrollArea" name="scrollArea_2">
           <property name="widgetResizable">
            <bool>true</bool>
@@ -290,7 +290,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="2">
          <widget class="QPushButton" name="noiseDetailsButton">
           <property name="maximumSize">
            <size>
@@ -300,6 +300,13 @@
           </property>
           <property name="text">
            <string>Details</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="blurButton">
+          <property name="text">
+           <string>Add Blur</string>
           </property>
          </widget>
         </item>
